# telegramma

./: .gitignore  README.md  example_config.py  pyproject.toml  telegramma.service
telegramma/: __init__.py  __main__.py  main.py
telegramma/api/: __init__.py  _admin.py  _argparse.py  _config.py  _database.py  _logging.py  _module.py  _version.py
telegramma/core/: __init__.py  bot.py  error_handler.py  modules.py
telegramma/modules/: __init__.py
telegramma/modules/anime/: __module__.py  main.py  senpy_club.py  some_random_api.py
telegramma/modules/bridgey/: __module__.py  main.py  task.py  telegram_queue.py
telegramma/modules/bridgey/types/: coordinator.py  file.py  message.py  message_type.py  platform.py  pool.py  user.py
telegramma/modules/ci/: __module__.py  main.py
telegramma/modules/ci/jobs/: __init__.py
telegramma/modules/ci/jobs/fluid-r/: __init__.py
telegramma/modules/ci/jobs/fluid-s/: __init__.py
telegramma/modules/ci/jobs/lineageos-r/: __init__.py
telegramma/modules/ci/jobs/lineageos-s/: __init__.py
telegramma/modules/ci/jobs/lineageos-t/: __init__.py
telegramma/modules/ci/types/: artifacts.py  job.py  parser.py  post_manager.py  queue.py  uploader.py
telegramma/modules/ci/utils/aosp/: job.py  returncode.py
telegramma/modules/ci/utils/aosp/tools/: building.sh
telegramma/modules/ci/utils/uploader/: __init__.py  ftp.py  localcopy.py  sftp.py
telegramma/modules/core/: __module__.py  main.py
telegramma/modules/fun/: __module__.py  main.py
telegramma/modules/info/: __module__.py  main.py
telegramma/modules/lineageos/: __module__.py  main.py
telegramma/modules/lineageos_updates/: __module__.py  main.py  observer.py  poster.py
telegramma/modules/nekobin/: __module__.py  main.py
telegramma/modules/sed/: __module__.py  main.py
telegramma/modules/shell/: __module__.py  main.py
telegramma/modules/speedtest/: __module__.py  main.py
telegramma/modules/stickers/: __module__.py  main.py
telegramma/modules/stickers/utils/: shared_sticker_pack.py
telegramma/modules/translate/: __module__.py  main.py
telegramma/modules/twrpdtgen/: __module__.py  main.py
telegramma/modules/xda/: __module__.py  main.py  words.py
