[tool.poetry]
name = "telegramma"
version = "1.0.0"
description = "Modular Telegram bot"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/telegramma"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.5"
sebaubuntu-libs = "^1.3.4"
twrpdtgen = "^3.0.0"
deepl = "^1.15.0"
speedtest-cli = "^2.1.3"
PyGithub = "^1.59"
GitPython = "^3.1.37"
paramiko = "^3.3.1"
colour = "^0.1.5"
py-cord = "^2.4.1"
matrix-nio = ">=0.19,<0.22"
Pillow = "^10.0.1"
python-magic = "^0.4.27"
"guilded.py" = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
