[tool.poetry]
name = "telegramma"
version = "1.0.0"
description = "Modular Telegram bot"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/telegramma"

[tool.poetry.scripts]
telegramma = 'telegramma.main:main'

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^21.6"
sebaubuntu-libs = "^1.5.0"
twrpdtgen = "^3.0.0"
deepl = "^1.21.1"
speedtest-cli = "^2.1.3"
PyGithub = "^2.6"
GitPython = "^3.1.44"
paramiko = "^3.5.1"
colour = "^0.1.5"
py-cord = "^2.6.1"
matrix-nio = ">=0.19,<0.26"
Pillow = "^10.4.0"
python-magic = "^0.4.27"
"guilded.py" = "^1.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
