[tool.poetry]
name = "telegramma"
version = "1.0.0"
description = "Modular Telegram bot"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/telegramma"

[tool.poetry.scripts]
telegramma = 'telegramma.main:main'

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^22.6"
sebaubuntu-libs = "^1.5.0"
twrpdtgen = "^3.0.0"
deepl = "^1.28.0"
speedtest-cli = "^2.1.3"
PyGithub = "^2.8"
GitPython = "^3.1.46"
paramiko = "^4.0.0"
colour = "^0.1.5"
py-cord = "^2.6.1"
audioop-lts = { version = "^0.2.2", python = "^3.13" }
matrix-nio = ">=0.19,<0.26"
Pillow = "^12.1.1"
python-magic = "^0.4.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
